docs/api/qiskit/0.29/qiskit.circuit.library.PhaseOracle.mdx
---
title: PhaseOracle
description: API reference for qiskit.circuit.library.PhaseOracle
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.PhaseOracle
---

# PhaseOracle

<Class id="qiskit.circuit.library.PhaseOracle" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.18/qiskit/circuit/library/phase_oracle.py" signature="PhaseOracle(expression, synthesizer=None)">
  Bases: `qiskit.circuit.quantumcircuit.QuantumCircuit`

  Phase Oracle.

  The Phase Oracle object constructs circuits for any arbitrary input logical expressions. A logical expression is composed of logical operators & (AND), | (OR), \~ (NOT), and ^ (XOR). as well as symbols for literals (variables). For example, ‘a & b’, and (v0 | \~v1) & (\~v2 & v3) are both valid string representation of boolean logical expressions.

  For convenience, this oracle, in addition to parsing arbitrary logical expressions, also supports input strings in the [DIMACS CNF format](http://www.satcompetition.org/2009/format-benchmarks2009.html), which is the standard format for specifying SATisfiability (SAT) problem instances in [Conjunctive Normal Form (CNF)](https://en.wikipedia.org/wiki/Conjunctive_normal_form), which is a conjunction of one or more clauses, where a clause is a disjunction of one or more literals. See `qiskit.circuit.library.phase_oracle.PhaseOracle.from_dimacs_file()`.

  From 16 variables on, possible performance issues should be expected when using the default synthesizer.

  Creates a PhaseOracle object

  **Parameters**

  *   **expression** (`Union`\[`str`, `ClassicalElement`]) – A Python-like boolean expression.
  *   **synthesizer** (`Optional`\[`Callable`\[\[`BooleanExpression`], `QuantumCircuit`]]) – Optional. A function to convert a BooleanExpression into a QuantumCircuit If None is provided, Tweedledum’s pkrm\_synth with phase\_esop will be used.

  ## Methods Defined Here

  ### evaluate\_bitstring

  <Function id="qiskit.circuit.library.PhaseOracle.evaluate_bitstring" name="evaluate_bitstring" signature="PhaseOracle.evaluate_bitstring(bitstring)">
    Evaluate the oracle on a bitstring. This evaluation is done classically without any quantum circuit.

    **Parameters**

    **bitstring** (`str`) – The bitstring for which to evaluate. The input bitstring is expected to be in little-endian order.

    **Return type**

    `bool`

    **Returns**

    True if the bitstring is a good state, False otherwise.
  </Function>

  ### from\_dimacs\_file

  <Function id="qiskit.circuit.library.PhaseOracle.from_dimacs_file" name="from_dimacs_file" signature="classmethod PhaseOracle.from_dimacs_file(filename)">
    Create a PhaseOracle from the string in the DIMACS format.

    It is possible to build a PhaseOracle from a file in [DIMACS CNF format](http://www.satcompetition.org/2009/format-benchmarks2009.html), which is the standard format for specifying SATisfiability (SAT) problem instances in [Conjunctive Normal Form (CNF)](https://en.wikipedia.org/wiki/Conjunctive_normal_form), which is a conjunction of one or more clauses, where a clause is a disjunction of one or more literals.

    The following is an example of a CNF expressed in the DIMACS format:

    ```python
    c DIMACS CNF file with 3 satisfying assignments: 1 -2 3, -1 -2 -3, 1 2 -3.
    p cnf 3 5
    -1 -2 -3 0
    1 -2 3 0
    1 2 -3 0
    1 -2 -3 0
    -1 2 3 0
    ```

    The first line, following the c character, is a comment. The second line specifies that the CNF is over three boolean variables — let us call them $x_1, x_2, x_3$, and contains five clauses. The five clauses, listed afterwards, are implicitly joined by the logical AND operator, $\land$, while the variables in each clause, represented by their indices, are implicitly disjoined by the logical OR operator, $lor$. The $-$ symbol preceding a boolean variable index corresponds to the logical NOT operator, $lnot$. Character 0 (zero) marks the end of each clause. Essentially, the code above corresponds to the following CNF:

    $(\lnot x_1 \lor \lnot x_2 \lor \lnot x_3) \land (x_1 \lor \lnot x_2 \lor x_3) \land (x_1 \lor x_2 \lor \lnot x_3) \land (x_1 \lor \lnot x_2 \lor \lnot x_3) \land (\lnot x_1 \lor x_2 \lor x_3)$.

    **Parameters**

    **filename** (`str`) – A file in DIMACS format.

    **Returns**

    A quantum circuit with a phase oracle.

    **Return type**

    [PhaseOracle](qiskit.circuit.library.PhaseOracle "qiskit.circuit.library.PhaseOracle")
  </Function>

  ## Attributes

  ### ancillas

  <Attribute id="qiskit.circuit.library.PhaseOracle.ancillas" name="ancillas">
    Returns a list of ancilla bits in the order that the registers were added.
  </Attribute>

  ### calibrations

  <Attribute id="qiskit.circuit.library.PhaseOracle.calibrations" name="calibrations">
    Return calibration dictionary.

    **The custom pulse definition of a given gate is of the form**

    \{‘gate\_name’: \{(qubits, params): schedule}}
  </Attribute>

  ### clbits

  <Attribute id="qiskit.circuit.library.PhaseOracle.clbits" name="clbits">
    Returns a list of classical bits in the order that the registers were added.
  </Attribute>

  ### data

  <Attribute id="qiskit.circuit.library.PhaseOracle.data" name="data">
    Return the circuit data (instructions and context).

    **Returns**

    a list-like object containing the tuples for the circuit’s data.

    Each tuple is in the format `(instruction, qargs, cargs)`, where instruction is an Instruction (or subclass) object, qargs is a list of Qubit objects, and cargs is a list of Clbit objects.

    **Return type**

    QuantumCircuitData
  </Attribute>

  ### extension\_lib

  <Attribute id="qiskit.circuit.library.PhaseOracle.extension_lib" name="extension_lib" attributeValue="= 'include &#x22;qelib1.inc&#x22;;'" />

  ### global\_phase

  <Attribute id="qiskit.circuit.library.PhaseOracle.global_phase" name="global_phase">
    Return the global phase of the circuit in radians.
  </Attribute>

  ### header

  <Attribute id="qiskit.circuit.library.PhaseOracle.header" name="header" attributeValue="= 'OPENQASM 2.0;'" />

  ### instances

  <Attribute id="qiskit.circuit.library.PhaseOracle.instances" name="instances" attributeValue="= 16" />

  ### metadata

  <Attribute id="qiskit.circuit.library.PhaseOracle.metadata" name="metadata">
    The user provided metadata associated with the circuit

    The metadata for the circuit is a user provided `dict` of metadata for the circuit. It will not be used to influence the execution or operation of the circuit, but it is expected to be passed between all transforms of the circuit (ie transpilation) and that providers will associate any circuit metadata with the results it returns from execution of that circuit.
  </Attribute>

  ### num\_ancillas

  <Attribute id="qiskit.circuit.library.PhaseOracle.num_ancillas" name="num_ancillas">
    Return the number of ancilla qubits.
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.library.PhaseOracle.num_clbits" name="num_clbits">
    Return number of classical bits.
  </Attribute>

  ### num\_parameters

  <Attribute id="qiskit.circuit.library.PhaseOracle.num_parameters" name="num_parameters">
    Convenience function to get the number of parameter objects in the circuit.
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.circuit.library.PhaseOracle.num_qubits" name="num_qubits">
    Return number of qubits.
  </Attribute>

  ### parameters

  <Attribute id="qiskit.circuit.library.PhaseOracle.parameters" name="parameters">
    Convenience function to get the parameters defined in the parameter table.
  </Attribute>

  ### prefix

  <Attribute id="qiskit.circuit.library.PhaseOracle.prefix" name="prefix" attributeValue="= 'circuit'" />

  ### qubits

  <Attribute id="qiskit.circuit.library.PhaseOracle.qubits" name="qubits">
    Returns a list of quantum bits in the order that the registers were added.
  </Attribute>
</Class>

